tests/error/array_of_unknown_size_in_sub_struct_with_members_after_it.c
// fail "Array of unknown size has to be the last member of struct."

struct s{
    int a : 1;
    struct { int b[]; };
    int c : 1;
};
